# SDL_gpu_shadercross

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  SDL_gpu_shadercross.h  SDL_gpu_spirvcross.h  test.c
.github/workflows/: main.yml
VisualC-GDK/: SDL_shadercross.sln  SDL_shadercross.vcxproj
build-scripts/: download-prebuilt-DirectXShaderCompiler.cmake  test-versioning.sh
cmake/: FindDirectXShaderCompiler.cmake  PrivateSdlFunctions.cmake  SDL3_gpu_shadercrossConfig.cmake.in  SDL3_shadercrossConfig.cmake.in  SDL_gpu_shadercrossConfig.cmake.in  sdl-gpu-shadercross.pc.in  sdl3-gpu-shadercross.pc.in  sdl3-shadercross.pc.in
cmake/test/: CMakeLists.txt  main.c
include/: SDL_gpu_shadercross.h
include/SDL3_gpu_shadercross/: SDL_gpu_shadercross.h
include/SDL3_shadercross/: SDL_shadercross.h
src/: SDL_gpu_shadercross.c  SDL_gpu_shadercross.sym  SDL_shadercross.c  SDL_shadercross.sym  cli.c  version.rc
